-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.968 2011-04-24 17:12:23 jluis Exp $
-----------------------------------------------------------------------------------------

2011-04-24	jluis
	* grdimage_func.c:	Accepts to illuminate an image read via GDAL with an 
				illumination grid computed with grdgradient.

2011-04-23	pwessel
	* example 28:		Now use clever smaller font-size for trailing 000s in UTM
				annotation (thanks to Florian Wobbe).
	* GMT_Docs.txt:		Use new GMT team group photo in the Acknowledgement pages.

2011-04-22	pwessel
	* ALL:			Clarify we use GNU version 2 or any later version of license
				as we also do for GMT 4.

2011-04-20	jluis
	* grdimage_func.c:	Now reprojects images using the new GMT_img_project function.

2011-04-20	pwessel
	* xyz2grd_func.c:	Added -Af|s for just keeping the first or last value to
				be assigned to a node.  Also placed -A (no arg) under
				compatibility (it becomes -Az).

2011-04-20	remko
	* gmt_support.c:	Make GMT_grid_clip_path work with pixel oriented grids.
	* gmt_io.c:		When closing polygons, copy all columns, not just first two;
				required for 3D.
	* psxyz_func.c:		Removed needless check on open polygons;
				Plot polygon with PSL_polygon, not GMT_geo_polygons.

2011-04-19	pwessel
	* gmt_vector.c:		Now holds the Gauss-Jordan and SVD codes (num.rec) that
				were used in greenspline_func.c.  These may eventually be
				replaced by the most optimal LA code on each platform.
				
2011-04-18	pwessel
	* gmt_support.c:	Added GMT_boundcond_image_set for images and renamed
				GMT_boundcond_image_set to GMT_boundcond_image_grid_set.
	* gmt_map.c:		Added GMT_img_project for efficient reprojection of images.
				This will be used in grdimage soon.
	
2011-04-18	remko
	* grdsample_func.c:	Allow some slack in determining whether -R exceeds grid boundaries.
	* doc/fig/*.ps:		Copied all output of scripts and examples here for use with